# c_cpp_stuff

Calculator/: CMakeLists.txt  README.md
Calculator/include/: CustomFloat.hpp  EquationNode.hpp  EquationTree.hpp  SimpleFraction.hpp  help_functions.hpp
Calculator/src/: CustomFloat.cpp  EquationNode.cpp  EquationTree.cpp  SimpleFraction.cpp  help_functions.cpp  main.cpp
Chess/: CMakeCache.txt  Makefile  README.md  cmake_install.cmake  lab_08  lab_08.cbp
Chess/include/: Empty.hpp
PenguinTest/Input/: arguments.txt  pattern.txt
PenguinTest/Report/: PenguinTest.txt
PenguinTest/include/: TextToken.hpp
PenguinTest/intern/: CMakeLists.txt
PenguinTest/intern/Input/: arguments.txt
PenguinTest/intern/include/: TextToken.hpp
PenguinTest/intern/src/: TextToken.cpp  main.cpp
PenguinTest/junior/Input/: arguments.XML
PenguinTest/junior/include/: TemplateText.hpp
PenguinTest/junior/src/: XMLBuilder.cpp
PenguinTest/middle/: CMakeLists.txt
PenguinTest/middle/Report/: PenguinTest.txt
PenguinTest/middle/include/: XMLBuilder.hpp
PenguinTest/middle/src/: TemplateText.cpp  main.cpp
PenguinTest/src/: TextToken.cpp
